--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,2 +1,23 @@
-<h1>Page#home</h1>
-<p>Find me in app/views/page/home.html.erb</p>
+<h1>Home Page</h1>
+<!-- views/page/home.html.erb -->
+
+
+
+
+
+
+<header class="header" id="header">
+  <!--header-start-->
+  <div class="container">
+    <figure class="logo animated fadeInDown delay-07s">
+      <!-- <a href="#"><img src="/assets/byebug_logo.png" alt=""></a> -->
+      <%= image_tag 'byebug_logo.png', id: 'byebug'%>
+    </figure>
+    <h1 class="animated fadeInDown delay-07s">ByeBug Development</h1>
+    <ul class="we-create animated fadeInUp delay-1s">
+      <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
+    </ul>
+    <a class="link animated fadeInUp delay-1s servicelink" href="mailto:info@byebugdev.com">Contact us!</a>
+  </div>
+</header>
+<!--header-end-->
