troubleshooting image in root page

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -12,8 +12,8 @@
   <header class="header" id="header">
     <!--header-start-->
     <div class="container">
-        <a href="#"><img src="/assets/byebug_logo.png" alt=""></a>
-        <%#= image_tag 'byebug_logo.png', id: 'byebug'%>
+        <!-- <a href="#"><img src="/assets/byebug_logo.png" alt=""></a> -->
+        <%= image_tag 'byebug_logo.png', id: 'byebug'%>
       <!-- </figure> -->
       <h1>ByeBug Development</h1>
       <ul>
