--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,16 +1,5 @@
-<body>
-  <div class="static-background">
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Mobile Development</a>
-          <a class="nav-item nav-link" href="#">Voice Control</a>
-          <a class="nav-item nav-link disabled" href="#">Our products</a>
-        </div>
-      </div>
-    </nav>
-
-    <header class="header" id="header">
+<body class="page-body">
+    <header class="header">
       <!--header-start-->
       <div class="container">
           <!-- <a href="#"><img src="/assets/byebug_logo.png" alt=""></a> -->
@@ -20,6 +9,21 @@
           <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
         </ul>
         <a href="mailto:info@byebugdev.com">Contact us!</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>hello</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>hello</h1>
+
       </div>
     </header>
   </div>
