--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -27,4 +27,93 @@
       </div>
     </header>
   </div>
+
+<section id="numbers">
+  <div class="numbers-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="numbers-section-title">Why you should choose us!</h2>
+          <p class="numbers-under-heading">Byebug</p>
+        </div>
+      </div>
+    </div>
+    <div class="section-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="num-data block-inline">
+              <%= image_tag 'http://via.placeholder.com/200x150'%>
+              <div class="counter">34,653</div>
+              <p>Tours Completed</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="num-data block-inline">
+              <%= image_tag 'http://via.placeholder.com/200x150'%>
+              <div class="counter">34,653</div>
+              <p>Tours Completed</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="num-data block-inline">
+              <%= image_tag 'http://via.placeholder.com/200x150'%>
+              <div class="counter">34,653</div>
+              <p>Tours Completed</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="after-numbers">
+  <div class="section">
+    <div class="section-wrapper-break">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="numbers-section-title">Pagebreaker</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <section id="after-numbers-2">
+  <div class="section">
+    <div class="section-wrapper-break">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="numbers-section-title">Powered by</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+<section class="last-section last-section-padded blue-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="item text-center">
+          <h4 class="white light"> An Image has a name</h4>
+
+          <%= image_tag 'http://via.placeholder.com/350x350'%>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="item text-center">
+          <h4 class="white light">A nice title</h4>
+          <h4 class="lightd-white light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute ir</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
 </body>
