--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,30 +1,36 @@
-<body class="page-body">
-    <header class="header">
-      <!--header-start-->
+<!-- <body class="page-body">
+    <header class="masthead">
       <div class="container">
-          <!-- <a href="#"><img src="/assets/byebug_logo.png" alt=""></a> -->
-          <%= image_tag 'byebug_logo.png'%>
-        <h1>ByeBug Development</h1>
-        <ul>
-          <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
-        </ul>
-        <a href="mailto:info@byebugdev.com">Contact us!</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1>hello</h1>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1>hello</h1>
-
+        <div class="row">
+          <div class="col-md-8">
+            <div class="img">
+              <%#= image_tag 'byebug_logo.png'%>
+            </div>
+          </div>
+          <div class="col-md-8" id='welcome'>
+            <h1>Welcome to ByeBug</h1>
+          </div>
+          <ul>
+            <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
+          </ul>
+          <a href="mailto:info@byebugdev.com">Contact us!</a>
+        </div>
       </div>
     </header>
   </div>
+</body> -->
+
+
+<body class="page-body">
+  <header class="masthead">
+    <div class="container">
+      <!-- <img class="img-fluid" src="img/profile.png" alt=""> -->
+      <%= image_tag 'byebug_logo.png', class: "img-fluid"%>
+      <div class="intro-text">
+        <span class="name">Welcome to ByeBug</span>
+        <hr class="star-light">
+        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+      </div>
+    </div>
+  </header>
 </body>
