committing changes for pull

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -9,16 +9,48 @@
           <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
         </ul>
         <a href="mailto:info@byebugdev.com">Contact us!</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1>hello</h1>
-        <br>
-        <br>
-        <br>
+
+        <!-- features section -->
+        <div class="section section-features">
+          <div class="container">
+            <h4 class="header-text text-center">Features</h4>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card card-blue">
+                        <div class="icon">
+                            <i class="pe-7s-note2"></i>
+                        </div>
+                        <div class="text">
+                            <h4>Mobile First Development</h4>
+                            <br>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-blue">
+                        <div class="icon">
+                            <i class="pe-7s-bell"></i>
+                        </div>
+                        <h4>SEO Optimization</h4>
+                        <br>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-blue">
+                        <div class="icon">
+                            <i class="pe-7s-graph1"></i>
+                        </div>
+                        <h4>User Friendly</h4>
+                        <br>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+        <!-- end features section  -->
         <br>
         <br>
         <br>
