--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -14,14 +14,13 @@ header.masthead img {
   margin: 0 auto 20px;
 }
 
-<<<<<<< HEAD
 header.masthead .intro-text .name {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 2em;
   font-weight: 700;
   display: block;
   text-transform: uppercase;
-=======
+}
 
 .page-body {
   background-color: black;
@@ -42,7 +41,6 @@ header.masthead .intro-text .name {
     font-size: 48px;
     font-weight: 900;
     padding-top: 2rem;
-
     text-align: center;
     font-family: 'Playfair Display', serif;
 }
@@ -120,9 +118,6 @@ header.masthead .intro-text .name {
 	padding: 140px 0 40px;
 }
 
-
-
-
 .blue-bg {
 	background: #00a8ff;
 }
@@ -133,7 +128,6 @@ header.masthead .intro-text .name {
 
 .light {
 	font-weight: 300;
->>>>>>> e771cf0d8c71195149aee407f071b3af5b150b40
 }
 
 header.masthead .intro-text .skills {
