--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -96,12 +96,10 @@ background-color: black;
 }
 
 .section-features .card  p{
-    font-size: 16px;
-    line-height: 22px;
-    color: #777;
-
-  background-color: black;
-  min-height: 4000px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #777;
+  min-height: 350;
 }
 
 .header{
