--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -24,7 +24,7 @@ header.masthead .intro-text .name {
 
 .page-body {
 
-background-color: black;
+  background-color: black;
 }
 
 .back-blue {
@@ -32,37 +32,37 @@ background-color: black;
 }
 
 .header-text{
-     text-transform: uppercase;
-     font-weight: 200;
-     color: #333;
-     margin-bottom: 20px;
-     font-size: 30px;
-     position: relative;
-     line-height: 24px;
+  text-transform: uppercase;
+  font-weight: 200;
+  color: #333;
+  margin-bottom: 20px;
+  font-size: 30px;
+  position: relative;
+  line-height: 24px;
 }
 .section-features{
-        margin: 50px 0;
-   }
+  margin: 50px 0;
+}
 
 .section-features .card{
-    width: 100%;
-    min-height: 390px;
-    padding: 10px 30px;
-    border: 1px solid #DDDDDD;
-    border-radius: 10px;
-    margin-top: 30px;
-    text-align: center;
+  width: 100%;
+  min-height: 390px;
+  padding: 10px 30px;
+  border: 1px solid #DDDDDD;
+  border-radius: 10px;
+  margin-top: 30px;
+  text-align: center;
 }
 .section-features .card .icon i{
-    font-size: 63px;
-    color: #9a9a9a;
-    width: 85px;
-    height: 85px;
-    line-height: 80px;
-    text-align: center;
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-top: 20px;
+  font-size: 63px;
+  color: #9a9a9a;
+  width: 85px;
+  height: 85px;
+  line-height: 80px;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 .section-features .card.card-blue{
@@ -83,16 +83,16 @@ background-color: black;
 .section-features .card.card-orange .icon i{
   color:#ff967f;
 }
- .section-features .card.card-red{
+.section-features .card.card-red{
   border-color: #FFBFC3;
 }
 .section-features .card.card-red .icon i{
   color:#E01724;
 }
 .section-features .card  h4{
-    font-weight: 300;
-    font-size: 18px;
-    margin: 30px 0 -15px;
+  font-weight: 300;
+  font-size: 18px;
+  margin: 30px 0 -15px;
 }
 
 .section-features .card  p{
@@ -112,57 +112,57 @@ background-color: black;
 // NUMBERS SECTION STYLING
 
 .numbers-section-title {
-    color:#129CF3;
-    font-size: 48px;
-    font-weight: 900;
-    padding-top: 2rem;
-    text-align: center;
-    font-family: 'Playfair Display', serif;
+  color:#129CF3;
+  font-size: 48px;
+  font-weight: 900;
+  padding-top: 2rem;
+  text-align: center;
+  font-family: 'Playfair Display', serif;
 }
 
 .numbers-under-heading {
-    font-weight: 700;
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Playfair Display', serif;
 }
 
 #numbers{
   background-color: lightgrey;
 }
 .section-wrapper {
-    margin-top: 60px;
-    text-align: center;
+  margin-top: 60px;
+  text-align: center;
 }
 .numbers-section {
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-    background-image: url(../images/crossword.png);
-    background-attachment: fixed;
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+  background-image: url(../images/crossword.png);
+  background-attachment: fixed;
 
 
 }
 .numbers-section .num-data  i {
-    color: #129CF3;
-    padding-bottom: 20px;
-    transition: all .7s;
-    -webkit-transition: all .7s;
-    -moz-transition: all .7s;
-    -o-transition: all .7s;
+  color: #129CF3;
+  padding-bottom: 20px;
+  transition: all .7s;
+  -webkit-transition: all .7s;
+  -moz-transition: all .7s;
+  -o-transition: all .7s;
 }
 .numbers-section .num-data  i:hover {
-    color: #333;
+  color: #333;
 }
 .numbers-section .num-data .counter {
-    font-size: 30px;
-    font-weight: 800;
-    padding-bottom: 8px;
+  font-size: 30px;
+  font-weight: 800;
+  padding-bottom: 8px;
 }
 .numbers-section .num-data p {
-    font-size: 18px;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-family: 'Playfair Display', serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: 'Playfair Display', serif;
 }
 
 
@@ -174,9 +174,9 @@ background-color: black;
   margin-top: 0;
 }
 .section-wrapper-break {
-    text-align: center;
-    paddin-top:2em;
-    padding-bottom: 2em;
+  text-align: center;
+  paddin-top:2em;
+  padding-bottom: 2em;
 }
 
 #after-numbers-2{
@@ -191,19 +191,19 @@ background-color: black;
 }
 
 .last-section-padded{
-	padding: 140px 0 40px;
+  padding: 140px 0 40px;
 }
 
 .blue-bg {
-	background: #00a8ff;
+  background: #00a8ff;
 }
 
 .white {
-	color: white;
+  color: white;
 }
 
 .light {
-	font-weight: 300;
+  font-weight: 300;
 
 }
 
@@ -218,6 +218,228 @@ header.masthead .intro-text .skills {
     padding-bottom: 100px; }
     header.masthead .intro-text .name {
       font-size: 4.75em; }
-    header.masthead .intro-text .skills {
-      font-size: 1.75em; }
-  }
+      header.masthead .intro-text .skills {
+        font-size: 1.75em; }
+      }
+
+
+
+
+
+      // KEVIN STUFF
+      //iphone
+
+      body {
+        font-family: roboto;
+      }
+      .holder {
+        background-color: #222;
+        width: 240px;
+        min-height: 450px;
+        border-radius: 40px;
+        margin-left: -120px;
+        margin-top: -225px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        .outline {
+          background-color: #000;
+          width: 235px;
+          min-height: 445px;
+          border-radius: 37px;
+          margin: 2.5px;
+          .screen {
+            color: #fff;
+            width: 220px;
+            min-height: 430px;
+            border-radius: 30px;
+            position: absolute;
+            margin: 7.5px;
+            background-image: url("https://www.invisionapp.com/subsystems/main_landing/assets/img/screens/ecommerce-15.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            .notification-icons {
+              font-size: 9px;
+              display: inline-block;
+              position: relative;
+              top: -12px;
+              left: -12px;
+            }
+            h1 {
+              margin-top: 40px;
+              font-size: 50px;
+              text-align: center;
+            }
+            p {
+              text-align: center;
+            }
+            .lock-icon, .cam-icon {
+              text-align: center;
+              width: 35px;
+              height: 35px;
+              font-size: 16px;
+              position: absolute;
+              bottom: 20px;
+              padding: 10px;
+              background: rgba(0,0,0,0.2);
+              border-radius: 100%;
+            }
+            .lock-icon {
+              left: 20px;
+            }
+            .cam-icon {
+              right: 20px;
+            }
+
+            .top-bump {
+              width: 125px;
+              min-height: 20px;
+              background-color: black;
+              border-bottom-left-radius: 20px;
+              border-bottom-right-radius: 20px;
+              margin-left: 50px;
+              .camera {
+                width: 7px;
+                min-height: 7px;
+                background-color: #222;
+                border-radius: 100%;
+                position: absolute;
+                right: 35%;
+                margin-top: -3.5px;
+                top: 8px;
+                .inner-camera {
+                  width: 4px;
+                  min-height: 4px;
+                  background-color: #2c3e50;
+                  border-radius: 100%;
+                  position: absolute;
+                  margin-left: -2px;
+                  left: 50%;
+                  margin-top: -2px;
+                  top: 50%;
+                }
+              }
+              .ear-speaker {
+                width: 45px;
+                min-height: 3px;
+                background-color: #333;
+                border-radius: 3px;
+                position: absolute;
+                margin-left: -22.5px;
+                left: 50%;
+                margin-top: -1.5px;
+                top: 8px;
+              }
+            }
+            .vol-up, .vol-down, .silent {
+              width: 10px;
+              min-height: 40px;
+              background-color: black;
+              border-top-left-radius: 10px;
+              border-bottom-left-radius: 10px;
+              position: absolute;
+              margin-left: -12.5px;
+              background: linear-gradient(to right, #333, #111);
+              z-index: -2;
+            }
+            .silent {
+              top: 50px;
+              min-height: 25px;
+            }
+            .vol-up {
+              top: 100px;
+            }
+            .vol-down {
+              top: 150px;
+            }
+          }
+        }
+      }
+      .drop-shadow {
+        width: 270px;
+        min-height: 15px;
+        margin-left: -135px;
+        position: absolute;
+        top: 500px;
+        left: 50%;
+        z-index: -50;
+        border-radius: 100%;
+        background-color: #222;
+        -webkit-filter: blur(15px);
+        -moz-filter: blur(15px);
+        -o-filter: blur(15px);
+        -ms-filter: blur(15px);
+        filter: blur(15px);
+      }
+
+      //macbook
+
+#wrapper {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.mac-book-pro {
+  width: 430px;
+  height: 400px;
+}
+
+.mac-book-pro-display {
+  position: relative;
+  margin: 0 auto;
+  width: 300px;
+  height: 180px;
+  border: 20px solid #000000;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  background-color: green;
+}
+
+.camera {
+  position: absolute;
+  left: 140px;
+  top: -10px;
+  background-color: #222222;
+  width: 5px;
+  height: 5px;
+  border-radius: 50px;
+}
+
+.mac-book-pro-body {
+  position: relative;
+  margin: 0 auto;
+  width: 430px;
+  height: 15px;
+  background-color: #DDDDDD;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.opening {
+  margin: 0 auto;
+  width: 100px;
+  height: 5px;
+  background-color: #888888;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.led {
+  position: absolute;
+  right: 15px;
+  top: 7px;
+  background-color: #555555;
+  width: 12px;
+  height: 2px;
+}
+
+.mac-book-pro-bottom {
+  display: block;
+  margin: 0 auto;
+  width: 401px;
+  border-top: 5px solid #999999;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+}
