--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,23 +1,23 @@
 <!-- <body class="page-body">
-    <header class="masthead">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="img">
-              <%#= image_tag 'byebug_logo.png'%>
-            </div>
-          </div>
-          <div class="col-md-8" id='welcome'>
-            <h1>Welcome to ByeBug</h1>
-          </div>
-          <ul>
-            <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
-          </ul>
-          <a href="mailto:info@byebugdev.com">Contact us!</a>
-        </div>
-      </div>
-    </header>
-  </div>
+<header class="masthead">
+<div class="container">
+<div class="row">
+<div class="col-md-8">
+<div class="img">
+<%#= image_tag 'byebug_logo.png'%>
+</div>
+</div>
+<div class="col-md-8" id='welcome'>
+<h1>Welcome to ByeBug</h1>
+</div>
+<ul>
+<li>We are a digital agency that focuses on creating impactful content and experiences.</li>
+</ul>
+<a href="mailto:info@byebugdev.com">Contact us!</a>
+</div>
+</div>
+</header>
+</div>
 
 </body> -->
 
@@ -35,145 +35,185 @@
     </div>
   </header>
 
-<section id="numbers">
-  <div class="numbers-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class="numbers-section-title">Why you should choose us!</h2>
-          <p class="numbers-under-heading">Byebug</p>
+  <section id="numbers">
+    <div class="numbers-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="numbers-section-title">Why you should choose us!</h2>
+            <p class="numbers-under-heading">Byebug</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="section-wrapper">
-      <div class="container">
+      <div class="section-wrapper">
+        <div class="container">
 
           <!-- <a href="#"><img src="/assets/byebug_logo.png" alt=""></a> -->
           <%= image_tag 'byebug_logo.png'%>
-        <h1>ByeBug Development</h1>
-        <ul>
-          <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
-        </ul>
-        <a href="mailto:info@byebugdev.com">Contact us!</a>
+          <h1>ByeBug Development</h1>
+          <ul>
+            <li>We are a digital agency that focuses on creating impactful content and experiences.</li>
+          </ul>
+          <a href="mailto:info@byebugdev.com">Contact us!</a>
 
-        <!-- features section -->
-        <div class="section section-features">
-          <div class="container">
-            <h4 class="header-text text-center">Features</h4>
-            <div class="row">
+          <!-- features section -->
+          <div class="section section-features">
+            <div class="container">
+              <h4 class="header-text text-center">Features</h4>
+              <div class="row">
                 <div class="col-md-4">
-                    <div class="card card-blue">
-                        <div class="icon">
-                            <i class="pe-7s-note2"></i>
-                        </div>
-                        <div class="text">
-                            <h4>Mobile First Development</h4>
-                            <br>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
+                  <div class="card card-blue">
+                    <div class="icon">
+                      <i class="pe-7s-note2"></i>
                     </div>
+                    <div class="text">
+                      <h4>Mobile First Development</h4>
+                      <br>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card card-blue">
-                        <div class="icon">
-                            <i class="pe-7s-bell"></i>
-                        </div>
-                        <h4>SEO Optimization</h4>
-                        <br>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <div class="card card-blue">
+                    <div class="icon">
+                      <i class="pe-7s-bell"></i>
                     </div>
+                    <h4>SEO Optimization</h4>
+                    <br>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card card-blue">
-                        <div class="icon">
-                            <i class="pe-7s-graph1"></i>
-                        </div>
-                        <h4>User Friendly</h4>
-                        <br>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                  <div class="card card-blue">
+                    <div class="icon">
+                      <i class="pe-7s-graph1"></i>
                     </div>
+                    <h4>User Friendly</h4>
+                    <br>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                  </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <!-- end features section  -->
+          <br>
+          <br>
+          <br>
+          <h1>hello</h1>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="num-data block-inline">
+                <%= image_tag 'http://via.placeholder.com/200x150'%>
+                <div class="counter">34,653</div>
+                <p>Tours Completed</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="num-data block-inline">
+                <%= image_tag 'http://via.placeholder.com/200x150'%>
+                <div class="counter">34,653</div>
+                <p>Tours Completed</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="num-data block-inline">
+                <%= image_tag 'http://via.placeholder.com/200x150'%>
+                <div class="counter">34,653</div>
+                <p>Tours Completed</p>
+              </div>
             </div>
           </div>
         </div>
-        <!-- end features section  -->
-        <br>
-        <br>
-        <br>
-        <h1>hello</h1>
+      </div>
+    </div>
+  </section>
 
+
+  <section id="after-numbers">
+    <div class="section">
+      <div class="section-wrapper-break">
         <div class="row">
-          <div class="col-md-4">
-            <div class="num-data block-inline">
-              <%= image_tag 'http://via.placeholder.com/200x150'%>
-              <div class="counter">34,653</div>
-              <p>Tours Completed</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="num-data block-inline">
-              <%= image_tag 'http://via.placeholder.com/200x150'%>
-              <div class="counter">34,653</div>
-              <p>Tours Completed</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="num-data block-inline">
-              <%= image_tag 'http://via.placeholder.com/200x150'%>
-              <div class="counter">34,653</div>
-              <p>Tours Completed</p>
-            </div>
+          <div class="col-md-12">
+            <h2 class="numbers-section-title">Pagebreaker</h2>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-
-<section id="after-numbers">
+  <!-- <section id="after-numbers-2">
   <div class="section">
-    <div class="section-wrapper-break">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class="numbers-section-title">Pagebreaker</h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- <section id="after-numbers-2">
-  <div class="section">
-    <div class="section-wrapper-break">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class="numbers-section-title">Powered by</h2>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="section-wrapper-break">
+  <div class="row">
+  <div class="col-md-12">
+  <h2 class="numbers-section-title">Powered by</h2>
+</div>
+</div>
+</div>
+</div>
 </section> -->
 
+<div>
+
+</div>
 <section class="last-section last-section-padded blue-bg">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <div class="item text-center">
-          <h4 class="white light"> An Image has a name</h4>
+        <!-- <div class="item text-center">
+        <h4 class="white light"> An Image has a name</h4>
 
-          <%= image_tag 'http://via.placeholder.com/350x350'%>
+        <%= image_tag 'http://via.placeholder.com/350x350'%>
+      </div> -->
+      <!-- HEREEEEEEEEEEEEEEEEEEEEEEE -->
+        <!-- main body -->
+        <div class='holder'>
+          <!-- front of body -->
+          <div class='outline'>
+            <!-- all of the screen -->
+            <div class='screen center-block'>
+              <!-- Top bump holding camera and speaker -->
+              <div class='top-bump center-block'>
+                <div class='ear-speaker'></div>
+                <div class='camera'>
+                  <div class='inner-camera'></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-md-8">
-        <div class="item text-center">
-          <h4 class="white light">A nice title</h4>
-          <h4 class="lightd-white light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute ir</h4>
+        <div class='drop-shadow'></div>
+
+      <!-- HEREEEEEEEEEEEEEEEEEEEEEE -->
+    </div>
+    <div class="col-md-8">
+      <div class="item text-center">
+        <h4 class="white light">A nice title</h4>
+        <div id="wrapper">
+
+        <!-- Mac Book Pro -->
+        <div class="mac-book-pro">
+          <div class="mac-book-pro-display">
+            <div class="camera"></div>
+          </div>
+          <div class="mac-book-pro-body">
+            <div class="opening"></div>
+            <div class="led"></div>
+          </div>
+          <div class="mac-book-pro-bottom"><span></span></div>
+        </div>
+        <!-- /Mac Book Pro -->
+
         </div>
       </div>
     </div>
   </div>
+</div>
 </section>
+
+
 
 
 </body>
